--- a/src/test/resources/reports/index.html
+++ b/src/test/resources/reports/index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Web Automation</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Feb 18, 2026 07:06:42 pm</span></a>
+<a href="#"><span class="badge badge-primary">Feb 18, 2026 07:28:58 pm</span></a>
 </li>
 </ul>
 </div>
@@ -87,7 +87,7 @@
           <div class="test-detail">
             <p class="name">C:\Users\NAGAVENI P\eclipse-workspace\Automation\src\test\resources\reports\index.html</p>
             <p class="text-sm">
-              <span>7:06:43 pm</span> / <span>00:00:00:000</span>
+              <span>7:28:58 pm</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -96,8 +96,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">C:\Users\NAGAVENI P\eclipse-workspace\Automation\src\test\resources\reports\index.html</h5>
-<span class='badge badge-success'>02.18.2026 7:06:43 pm</span>
-<span class='badge badge-danger'>02.18.2026 7:06:43 pm</span>
+<span class='badge badge-success'>02.18.2026 7:28:58 pm</span>
+<span class='badge badge-danger'>02.18.2026 7:28:58 pm</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -114,7 +114,7 @@
           <div class="test-detail">
             <p class="name">Payment</p>
             <p class="text-sm">
-              <span>7:07:30 pm</span> / <span>00:00:00:000</span>
+              <span>7:29:42 pm</span> / <span>00:00:00:001</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -123,9 +123,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Payment</h5>
-<span class='badge badge-success'>02.18.2026 7:07:30 pm</span>
-<span class='badge badge-danger'>02.18.2026 7:07:30 pm</span>
-<span class='badge badge-default'>00:00:00:000</span>
+<span class='badge badge-success'>02.18.2026 7:29:42 pm</span>
+<span class='badge badge-danger'>02.18.2026 7:29:42 pm</span>
+<span class='badge badge-default'>00:00:00:001</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -139,36 +139,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">logging</p>
-            <p class="text-sm">
-              <span>7:07:37 pm</span> / <span>00:00:00:000</span>
-              <span class="badge pass-bg log float-right">Pass</span>
-            </p>
-          </div>
-          <div class="test-contents d-none">
-<div class="detail-head">
-<div class="p-v-10">
-<div class="info">
-<h5 class="test-status text-pass">logging</h5>
-<span class='badge badge-success'>02.18.2026 7:07:37 pm</span>
-<span class='badge badge-danger'>02.18.2026 7:07:37 pm</span>
-<span class='badge badge-default'>00:00:00:000</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
-<span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
-<span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
-<span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
-</div>
-</div>
-</div>          </div>
-        </li>
-        <li class="test-item"  status="pass" test-id="4"
-          author=""
-          tag=""
-          device="">
-          <div class="test-detail">
             <p class="name">addProduct</p>
             <p class="text-sm">
-              <span>7:07:37 pm</span> / <span>00:00:01:633</span>
+              <span>7:29:42 pm</span> / <span>00:00:00:001</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -177,39 +150,25 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">addProduct</h5>
-<span class='badge badge-success'>02.18.2026 7:07:37 pm</span>
-<span class='badge badge-danger'>02.18.2026 7:07:38 pm</span>
-<span class='badge badge-default'>00:00:01:633</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
+<span class='badge badge-success'>02.18.2026 7:29:42 pm</span>
+<span class='badge badge-danger'>02.18.2026 7:29:42 pm</span>
+<span class='badge badge-default'>00:00:00:001</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
 <span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
 </div>
 </div>
-</div><div class="detail-body mt-4">
-<table class="table table-sm">
-  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
-  <tbody>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>7:07:38 pm</td>
-        <td>
-          Test Passed
-        </td>
-      </tr>
-  </tbody>
-</table>
-</div>
-          </div>
+</div>          </div>
         </li>
-        <li class="test-item"  status="fail" test-id="5"
+        <li class="test-item"  status="fail" test-id="4"
           author=""
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">orderConfirmation</p>
+            <p class="name">logging</p>
             <p class="text-sm">
-              <span>7:08:01 pm</span> / <span>00:01:03:408</span>
+              <span>7:29:44 pm</span> / <span>00:00:15:905</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -217,11 +176,11 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-fail">orderConfirmation</h5>
-<span class='badge badge-success'>02.18.2026 7:08:01 pm</span>
-<span class='badge badge-danger'>02.18.2026 7:09:05 pm</span>
-<span class='badge badge-default'>00:01:03:408</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
+<h5 class="test-status text-fail">logging</h5>
+<span class='badge badge-success'>02.18.2026 7:29:44 pm</span>
+<span class='badge badge-danger'>02.18.2026 7:30:00 pm</span>
+<span class='badge badge-default'>00:00:15:905</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
 <span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
@@ -230,9 +189,9 @@
 </div>    <div class="row mb-3"><div class="col-md-3">
     
 
-<img data-featherlight='C:\Users\NAGAVENI P\eclipse-workspace\Automation\src\test\resources\reportsaddProduct.png' src="C:\Users\NAGAVENI P\eclipse-workspace\Automation\src\test\resources\reportsaddProduct.png">
+<img data-featherlight='C:\Users\NAGAVENI P\eclipse-workspace\Automation\src\test\resources\reportsPayment.png' src="C:\Users\NAGAVENI P\eclipse-workspace\Automation\src\test\resources\reportsPayment.png">
   
-    <div class="title">addProduct</div>
+    <div class="title">Payment</div>
 
     </div></div>
 <div class="detail-body mt-4">
@@ -241,33 +200,40 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>7:08:10 pm</td>
-        <td>
-          Test Passed
-        </td>
-      </tr>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>7:09:02 pm</td>
+        <td>7:29:53 pm</td>
         <td>
           Test Passed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>7:09:04 pm</td>
+        <td>7:30:00 pm</td>
         <td>
-          <textarea readonly class="code-block">org.openqa.selenium.TimeoutException: Expected condition failed: waiting for visibility of element located by By.xpath:  //div [contains(text(),'Product Added To Cart')]  (tried for 60 second(s) with 500 milliseconds interval)
+          <textarea readonly class="code-block">org.openqa.selenium.ElementClickInterceptedException: element click intercepted: Element <button _ngcontent-frd-c36="" class="btn btn-primary" style="margin-top: -20px;">...</button> is not clickable at point (540, 399). Other element would receive the click: <div role="alert" class="ng-tns-c4-2 toast-message ng-star-inserted" aria-label="Product Added To Cart" style="">...</div>
+  (Session info: chrome=145.0.7632.75)
 Build info: version: '4.33.0', revision: '2c6aaad03a'
 System info: os.name: 'Windows 10', os.arch: 'amd64', os.version: '10.0', java.version: '17.0.1'
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 145.0.7632.75, chrome: {chromedriverVersion: 145.0.7632.76 (ee36f024f43a..., userDataDir: C:\Users\NAGAVE~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:54106}, goog:processID: 18076, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:54106/devtoo..., se:cdpVersion: 145.0.7632.75, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: f40653eda473ef9753571cba44ec57ff
-	at org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:84)
-	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:228)
-	at support.AbstractComponent.waitForElementToAppear(AbstractComponent.java:32)
-	at page.productPage.addToCart(productPage.java:86)
-	at testcase.ProductPageTest.addProduct(ProductPageTest.java:23)
+Command: [ec930b02bdbb2a2f8218648054990c33, clickElement {id=f.EF64FC098CC9DDD154903343FAEC9158.d.03F781D11EAD0558A831CF06DEFFAD14.e.94}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 145.0.7632.75, chrome: {chromedriverVersion: 145.0.7632.76 (ee36f024f43a..., userDataDir: C:\Users\NAGAVE~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:54383}, goog:processID: 3840, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:54383/devtoo..., se:cdpVersion: 145.0.7632.75, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Element: [[ChromeDriver: chrome on windows (ec930b02bdbb2a2f8218648054990c33)] -> xpath: //*[contains(@class, 'btn btn-primary') and contains(text(), 'Buy Now')]]
+Session ID: ec930b02bdbb2a2f8218648054990c33
+	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
+	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
+	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
+	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:499)
+	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:480)
+	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:215)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:544)
+	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:223)
+	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:76)
+	at page.productPage.clickBuyNow(productPage.java:100)
+	at testcase.PaymentPageTest.Payment(PaymentPageTest.java:26)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -299,6 +265,54 @@ Session ID: f40653eda473ef9753571cba44ec57ff
 </div>
           </div>
         </li>
+        <li class="test-item"  status="pass" test-id="5"
+          author=""
+          tag=""
+          device="">
+          <div class="test-detail">
+            <p class="name">orderConfirmation</p>
+            <p class="text-sm">
+              <span>7:30:12 pm</span> / <span>00:01:06:252</span>
+              <span class="badge pass-bg log float-right">Pass</span>
+            </p>
+          </div>
+          <div class="test-contents d-none">
+<div class="detail-head">
+<div class="p-v-10">
+<div class="info">
+<h5 class="test-status text-pass">orderConfirmation</h5>
+<span class='badge badge-success'>02.18.2026 7:30:12 pm</span>
+<span class='badge badge-danger'>02.18.2026 7:31:18 pm</span>
+<span class='badge badge-default'>00:01:06:252</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
+<span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
+<span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
+<span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
+</div>
+</div>
+</div><div class="detail-body mt-4">
+<table class="table table-sm">
+  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
+  <tbody>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>7:30:16 pm</td>
+        <td>
+          Test Passed
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>7:31:18 pm</td>
+        <td>
+          Test Passed
+        </td>
+      </tr>
+  </tbody>
+</table>
+</div>
+          </div>
+        </li>
       </ul>
     </div>
   </div>
@@ -321,12 +335,12 @@ Session ID: f40653eda473ef9753571cba44ec57ff
 <span class="meta">
 <span class='badge log badge-danger'>1</span>
 </span>
-<p class="name">org.openqa.selenium.TimeoutException</p>
+<p class="name">org.openqa.selenium.ElementClickInterceptedException</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>org.openqa.selenium.TimeoutException</h4>
+<h4>org.openqa.selenium.ElementClickInterceptedException</h4>
 <span status="fail" class='badge log badge-danger'>1 failed</span>
 </div>
 <table class='table table-sm mt-4'>
@@ -340,9 +354,9 @@ Session ID: f40653eda473ef9753571cba44ec57ff
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>19:08:01 pm</td>
+<td>19:29:44 pm</td>
 <td>
-<a href="#" class="linked" test-id='5' id='5'>orderConfirmation</a>
+<a href="#" class="linked" test-id='4' id='4'>logging</a>
 </td>
 </tr>
 </tbody>
@@ -362,13 +376,13 @@ Session ID: f40653eda473ef9753571cba44ec57ff
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Feb 18, 2026 07:06:42 pm</h3>
+<h3>Feb 18, 2026 07:28:58 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Feb 18, 2026 07:09:07 pm</h3>
+<h3>Feb 18, 2026 07:31:20 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -438,7 +452,7 @@ Session ID: f40653eda473ef9753571cba44ec57ff
 </div></div>
 <script>
 var timeline = {
-"C:\Users\NAGAVENI P\eclipse-workspace\Automation\src\test\resources\reports\index.html":0,"Payment":0,"logging":0,"addProduct":1.633,"orderConfirmation":63.408
+"C:\Users\NAGAVENI P\eclipse-workspace\Automation\src\test\resources\reports\index.html":0,"Payment":0.001,"addProduct":0.001,"logging":15.905,"orderConfirmation":66.252
 };
 </script>
 <div class="row">
