--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="916fd6">  <td>26/02/18 18:57:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.logging()[pri:0, instance:testcase.LoginTest@783a467b]">logging</td> 
+<tr bgcolor="916fd6">  <td>26/02/18 19:41:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PaymentPageTest.Payment()[pri:0, instance:testcase.PaymentPageTest@783a467b]">Payment</td> 
   <td>main@1433867275</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>26/02/18 18:57:07</td>   <td>-10939</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:testcase.LoginTest@783a467b]">&gt;&gt;setup</td> 
+<tr bgcolor="7edf66">  <td>26/02/18 19:41:20</td>   <td>-14523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:testcase.PaymentPageTest@783a467b]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
-<tr bgcolor="7edf66">  <td>26/02/18 18:57:19</td>   <td>1297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:testcase.LoginTest@783a467b]">&lt;&lt;teardown</td> 
+<tr bgcolor="7edf66">  <td>26/02/18 19:41:42</td>   <td>7596</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:testcase.PaymentPageTest@783a467b]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
 </table>
